feat: adiciona estrutura de admin (role, rotas /admin e página de admin)