@@ -7,12 +7,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.apache.logging.log4j.util.Strings;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -53,8 +54,10 @@ if (Strings.isNotEmpty(token)) {
     Optional<JWTUserData> optUser = tokenConfig.validateToken(token);
     if (optUser.isPresent()) {
         JWTUserData userData = optUser.get();
+        String role = userData.role() != null ? userData.role() : "USER";
         UsernamePasswordAuthenticationToken authentication =
-                new UsernamePasswordAuthenticationToken(userData, null, Collections.emptyList());
+                new UsernamePasswordAuthenticationToken(userData, null,
+                        List.of(new SimpleGrantedAuthority("ROLE_" + role)));
         SecurityContextHolder.getContext().setAuthentication(authentication);
     }
 }
